[gd_scene load_steps=5 format=3 uid="uid://cpsx4hrhcfh80"]

[ext_resource type="Script" path="res://Main Scene.gd" id="1_16fyg"]
[ext_resource type="PackedScene" uid="uid://bfogorninf4af" path="res://Player.tscn" id="1_ksrfw"]
[ext_resource type="PackedScene" uid="uid://oik3wsxapkxr" path="res://BasicEnemy.tscn" id="3_a2rou"]
[ext_resource type="Texture2D" uid="uid://cl1h7gasf4lpx" path="res://woodsSummer01.png" id="4_htdex"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_16fyg")

[node name="PlayerTopDown" parent="." instance=ExtResource("1_ksrfw")]

[node name="BasicEnemy" parent="." instance=ExtResource("3_a2rou")]
position = Vector2(68, -172)

[node name="EnemyTimer" type="Timer" parent="."]
autostart = true

[node name="TextureRect" type="TextureRect" parent="."]
z_index = -1
offset_left = -632.0
offset_top = -543.0
offset_right = 594.0
offset_bottom = 683.0
texture = ExtResource("4_htdex")

[connection signal="timeout" from="EnemyTimer" to="." method="_on_enemy_timer_timeout"]
